fix(visuals): visual fixes in header and in sidebar
fixed misaligned buttons in the header, and changed font weight in the action sidebar

775

--- a/src/components/ActionSidebar/ActionSidebar.module.scss
+++ b/src/components/ActionSidebar/ActionSidebar.module.scss
@@ -16,7 +16,7 @@
         .playButtonContainer {
 
             button {
-                font-weight: 600;
+                font-weight: 500;
                 text-transform: none;
                 font-size: 16px;
                 letter-spacing: 0.45px;
